Build opening book from PGNs with caching